# taybart.com

./: .gitignore  .prettierrc  Cargo.toml  Dockerfile  Makefile.toml  README.md  build  go.mod  handlers.go  index.html  input.css  main.go  make_styles.sh  package-lock.json  package.json  postcss.config.js  preact.config.js  routes.go  run  size-plugin.json  tailwind.config.js  test.json
.vercel/output/_functions/: entry.mjs
.vercel/output/_functions/chunks/: Layout_Dx-yBWFk.mjs  _id__Tn1ICwSQ.mjs  astro-component_B0fcdV5B.mjs  entrypoint_B2cFTU3Y.mjs  generic_BphwOKXd.mjs  hn_BiJlbsE2.mjs  index_CLtiboyk.mjs  sharp_DdVf_LOZ.mjs
.vercel/output/static/_astro/: Layout.clQxKa6o.css  client.DAl1SKo2.js  hn.Z_2f-o1p.js
assets/js/: hn.js
assets/style/: builtins.css  header.css  index.css
assets/style/hn/: frontpage.css  item.css
backend/: .env  Caddyfile  db.go  db_test.go  go.mod  go.sum  handle_get_note.go  handle_login.go  handle_notes.go  handle_set_note.go  handle_websockets.go  main.go  middleware.go  randproxy.sh  routes.go  server.db  storage.go  user.go  validator.go  vc_signaling.go
backend/notes/: client.go  notes.go
deploy/: Caddyfile  Dockerfile  build  restart_server
frontend/: .temp.1668540850472.tailwind.config.cjs  .temp.1668540851570.tailwind.config.cjs  astro.config.mjs  index.html  input.css  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.cjs  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts  windi.config.ts
frontend/.astro/: data-store.json  settings.json
frontend/.husky/: pre-commit
frontend/.vercel/output/: config.json
frontend/.vercel/output/_functions/: entry.mjs
frontend/src/: App.svelte  App.tsx  app.css  app.rs  header.css  index.css  main.rs  main.tsx  markdown.css  store.ts
frontend/src/components/: Comment.tsx  Header.astro  Loading.tsx  Story.tsx
frontend/src/components/header/: index.tsx  style.css
frontend/src/components/icons/: Email.tsx  Github.tsx  LinkedIn.tsx  index.ts
frontend/src/components/loading/: index.tsx
frontend/src/components/organisms/: Header.svelte
frontend/src/layouts/: Layout.astro
frontend/src/pages/: hn.astro  index.astro  todo.rs
frontend/src/pages/post/: [id].astro
frontend/src/routes/: HN.svelte  Resume.svelte
frontend/src/routes/hn/: index.tsx  style.css
frontend/src/routes/home/: index.tsx
frontend/src/routes/login/: index.tsx  style.css
frontend/src/routes/notes/: Edit.tsx  EditIcon.tsx  Note.tsx  NotesList.tsx  PencilIcon.tsx  index.css  index.tsx
frontend/src/routes/notfound/: index.tsx
frontend/src/routes/resume/: index.tsx  style.css
frontend/src/types/: hn.ts
frontend/src/util/: Editor.tsx  api.ts  mobile.ts  slate_vim_plugin.ts  vim.ts
hn/: hn_frontpage.go  hn_post.go
migrations/: 20221118172000_create_todo_table.sql  20250310201718_init.sql
public/: global.css  index.html
scripts/: setupTypeScript.js
server/: go.mod  go.sum  main.go  run  signaling.go
src/: App.svelte  app.rs  index.css  index.js  lib.rs  main.rs  manifest.json  template.html
src/assets/: left-arrow.afphoto
src/components/: Loading.astro  app.js  app.tsx  header.rs  loading.rs  mod.rs
src/components/header/: darkmode_toggle.js  index.js  index.tsx  scheme_listener.ts  style.css  style.css.d.ts  style.module.css
src/components/pages/: Resume.svelte
src/db/: auth.rs  client.rs  mod.rs
src/macros/: mod.rs  ok_err.rs  page.rs  request.rs
src/organisms/: Header.svelte
src/pages/: home.rs  mod.rs  todo.rs
src/pages/hn/: api.rs  front_page.rs  mod.rs  story.rs
src/routes/: api.rs  health_check.rs  middleware.rs  mod.rs
src/routes/blog/: index.js  post.js
src/routes/hn/: frontpage.js  index.js  index.tsx  post.js  style.css  style.css.d.ts  style.module.css
src/routes/hn/post/: index.tsx  style.css  style.css.d.ts
src/routes/home/: index.js  index.tsx  style.module.css
src/routes/login/: index.js  style.module.css
src/routes/notfound/: index.tsx  style.css.d.ts
src/routes/pages/: hn.rs  mod.rs  test_item.json
src/routes/profile/: index.js  style.module.css
src/routes/resume/: index.js  index.tsx  style.css  style.css.d.ts  style.module.css
src/routes/voicechat/: chat.js  index.js  peer_connection.js  shh.js  signaling_connection.js  style.module.css
src/style/: index.css
static/css/: header.css  hn.css  index.css  resume.css
style/: output.css  tailwind.css
templates/: base.html  index.html  login.html  upload.html
templates/base/: header.tmpl  meta.tmpl
templates/hn/: comment.html  frontpage.html  hn_frontpage.tmpl  hn_post.tmpl  item.html
templates/resume/: resume.tmpl
ui/: index.html  package.json  tailwind.config.cjs  tailwind.config.js  vite.config.ts
ui/src/: App.svelte  App.tsx  app.css  index.css
ui/src/components/atoms/: NavLink.svelte  right-arrow.svelte
ui/src/components/organisms/: Header.svelte
ui/src/pages/hn/: Post.tsx  index.module.css  index.tsx
ui/src/pages/resume/: index.module.css  (+1 more)
ui/src/routes/: NotFound.svelte  Resume.svelte
util/: cache.go
(+30 files in other folders)
