[package]
name = "site"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
actix-files = { version = "0.6", optional = true }
actix-web = { version = "4", features = ["macros"], optional = true }
broadcaster = "1.0.0"
cfg-if = "1.0"
console_error_panic_hook = { version = "0.1", optional = true }
console_log = { version = "1", optional = true }
futures = { version = "0.3", optional = true }
gloo-net = { version = "0.2", features = ["http"] }
leptos = { version = "0.3.1", default-features = false, features = ["serde"] }
# leptos = { path = "/Users/taylor/.tmp/leptos/leptos", features = ["nightly", "serde"] }
leptos_actix = { version = "0.3.1", optional = true }
leptos_meta = { version = "0.3.1" }
leptos_router = { version = "0.3.1" }
log = "0.4"
regex = "1.8.1"
reqwest = "0.11.17"
serde = { version = "1.0.152", features = ["derive"] }
simple_logger = { version = "4.0", optional = true }
sqlx = { version = "0.6.3", features = [
  "runtime-tokio-rustls",
  "sqlite",
], optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[features]
default = ["ssr"]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate", "dep:wasm-bindgen", "dep:console_log", "dep:console_error_panic_hook"]
csr = ["leptos/csr", "leptos_meta/csr", "leptos_router/csr", "dep:wasm-bindgen", "dep:console_log", "dep:console_error_panic_hook"]
ssr = ["dep:actix-files", "dep:actix-web", "dep:sqlx", "dep:futures", "leptos/ssr", "leptos_actix", "leptos_meta/ssr", "leptos_router/ssr"]

[package.metadata.cargo-all-features]
denylist = [
  "actix-files",
  "actix-web",
  "console_error_panic_hook",
  "console_log",
  "futures",
  "leptos_actix",
  "simple_logger",
  "wasm-bindgen",
  "sqlx",
]
skip_feature_sets = [["csr", "ssr"], ["csr", "hydrate"], ["ssr", "hydrate"]]

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

# [rust-analyzer.cargo.features]


[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "site"
# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"
# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"
# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style-file = "style/output.css"
# [Optional] Files in the asset-dir will be copied to the site-root directory
assets-dir = "public"
# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3000"
# The port to use for automatic reload monitoring
reload-port = 3001
# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
end2end-cmd = "npx playwright test"

tailwind-input-file = "style/tailwind.css"
#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"
# Set by cargo-leptos watch when building with tha tool. Controls whether autoreload JS will be included in the head
watch = false
# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"
# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false


