[package]
name = "taybart_com"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
async-trait = "0.1.87"
axum = { version = "0.8.1", features = ["macros", "multipart"] }
axum-embed = "0.1.0"
axum-login = "0.17.0"
chrono = "0.4.40"
futures = "0.3.31"
include_dir = { version = "0.7.4", features = [ "glob" ] }
lazy_static = "1.5.0"
password-auth = "1.0.0"
rand = "0.9.0"
reqwest = { version = "0.12.15", features = ["json"] }
rust-embed = "8.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "sqlite", "macros"] }
tera = "1.20.0"
thiserror = "2.0.12"
tokio = { version = "1.44.0", features = ["full"] }
tokio-util = "0.7.13"
tower-http = { version = "0.6.2", features = ["cors", "trace", "fs"] }
tower-sessions-sqlx-store = { version = "0.15.0", features = ["sqlite"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
